added first edition console view

--- a/styles/processing.less
+++ b/styles/processing.less
@@ -6,3 +6,13 @@
 
 .processing {
 }
+.script-view {
+  overflow: scroll;
+  max-height: 300px;
+  height: auto;
+  margin-bottom: 0px;
+  .line{
+    padding: 0 9.5px;
+    font-size: inherit;
+  }
+}
